--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
-  <title>A Wind to Shake the Stars</title>
+  <title>Stellar Wind</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div id="stars"></div>
   <script src="js/phaser.js"></script>
   <script src="js/game.js"></script>
-
-
-
 </body>
 </html>
